kubernetes/elasticsearch-ns.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: elasticsearch
  labels:
    kubernetes.io/metadata.name: elasticsearch
