kubernetes/alpine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpine
  name: alpine
  namespace: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - image: alpine
        name: alpine
        command: ["bash","-c"]
        args:
          - |
            apk add git curl
            git clone https://github.com/StamusNetworks/KTS7.git
            cd API-KIBANA7
            curl -X POST "kibana:5601/api/saved_objects/_import" -H 'kbn-xsrf: true' --form file=@index-pattern.ndjson
            curl -X POST "kibana:5601/api/saved_objects/_import" -H 'kbn-xsrf: true' --form file=@search.ndjson
            curl -X POST "kibana:5601/api/saved_objects/_import" -H 'kbn-xsrf: true' --form file=@visualization.ndjson
            curl -X POST "kibana:5601/api/saved_objects/_import" -H 'kbn-xsrf: true' --form file=@dashboard.ndjson
            curl -X POST "kibana:5601/api/saved_objects/_import" -H 'kbn-xsrf: true' --form file=@query.ndjson
