kubernetes/elasticsearch-statefulset.yaml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
  namespace: elasticsearch
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      service: elasticsearch
  replicas: 1
  serviceName: es
  template:
    metadata:
      labels:
        service: elasticsearch
        serviceName: es
    spec:
      terminationGracePeriodSeconds: 120

      containers:
      - name: elasticsearch
        image: "docker.elastic.co/elasticsearch/elasticsearch:7.16.3"
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport

        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000

        readinessProbe:
          exec:
            command:
              - bash
              - -c
              - |
                [...]
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
              - curl --silent --fail localhost:9200/_cluster/health || exit 1
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5

        resources:
          limits:
            cpu: 1000m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi

        volumeMounts:
        - mountPath: /data
          name: elasticsearch-data

      securityContext:
        fsGroup: 1000

      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                service: elasticsearch

      volumes:
      - name: initcontainer-script
        configMap:
          name: elasticsearch-initcontainer
          defaultMode: 0755
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-data

      restartPolicy: Always
