kubernetes/filebeat-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: suricata
  labels:
    app: filebeat
spec:
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      # serviceAccountName: filebeat
      terminationGracePeriodSeconds: 30

      containers:
      - name: filebeat
        image: "docker.elastic.co/beats/filebeat:7.16.3"
        args:
        - "-e"
        - "-E"
        - "http.enabled=true"

        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              #!/usr/bin/env bash -e
              curl --fail 127.0.0.1:5066
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - |
              #!/usr/bin/env bash -e
              filebeat test output
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5

        resources:
          limits:
            cpu: 1000m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi

        securityContext:
          privileged: false
          runAsUser: 0

        volumeMounts:
        - name: filebeat-config
          mountPath: /usr/share/filebeat/filebeat.yml
          readOnly: true
          subPath: filebeat.yml

        - name: data
          mountPath: /usr/share/filebeat/data

        - mountPath: /var/log/suricata
          name: suricata-log
          readOnly: True

        - name: var-log-containers
          mountPath: /var/log/containers
          readOnly: true

      nodeSelector:
        kubernetes.io/os: linux

      volumes:
      - name: filebeat-config
        configMap:
          defaultMode: 0600
          name: filebeat-config

      - name: suricata-log
        persistentVolumeClaim:
          claimName: suricata-log
          readOnly: true

      - name: var-log-containers
        hostPath:
          path: /var/log/containers

      - name: data
        hostPath:
          path: /var/lib/filebeat-data
          type: DirectoryOrCreate
