kubernetes/kibana-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: kibana
  name: kibana
  namespace: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      annotations:
      labels:
        app: kibana
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: kibana
          image: "docker.elastic.co/kibana/kibana:7.16.3"

          ports:
            - containerPort: 5601

          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 3
            timeoutSeconds: 5
            exec:
              command:
                - sh
                - -c
                - |
                  [...]
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            exec:
              command:
                - sh
                - -c
                - |
                  [...]
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi

          securityContext:
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            runAsUser: 1000
      restartPolicy: Always
