kubernetes/scirius-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: scirius
  name: scirius
  namespace: suricata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scirius
  template:
    metadata:
      annotations:
      labels:
        app: scirius
    spec:
      securityContext:
        fsGroup: 996
      containers:
        - name: scirius
          image: ghcr.io/stamusnetworks/scirius:master
          resources:
            requests:
              memory: 1Gi
              cpu: 100m
            limits:
              cpu: 500m
              memory: 1Gi

          volumeMounts:
            - mountPath: /static/
              name: scirius-static
            - mountPath: /data/
              name: scirius-data
            - mountPath: /logs/
              name: scirius-logs
            - mountPath: /rules
              name: suricata-rules
            - mountPath: /var/run/suricata
              name: suricata-run

      restartPolicy: Always
      volumes:
        - name: scirius-static
          persistentVolumeClaim:
            claimName: scirius-static
        - name: scirius-data
          persistentVolumeClaim:
            claimName: scirius-data
        - name: scirius-logs
          persistentVolumeClaim:
            claimName: scirius-logs

        - name: suricata-rules
          persistentVolumeClaim:
            claimName: suricata-rules
        - name: suricata-run
          persistentVolumeClaim:
            claimName: suricata-run
