kubernetes/arkime-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: arkime
  namespace: suricata
  labels:
    app: arkime
spec:
  type: ClusterIP
  ports:
    - port: 8005
      protocol: TCP
      name: http
      targetPort: 8005
  selector:
    app: arkime
