kubernetes/evebox-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: evebox
  name: evebox
  namespace: suricata
spec:
  ports:
    - name: "web"
      port: 5636
      targetPort: 5636
  selector:
    app: evebox
  sessionAffinity: None
  type: ClusterIP
