kubernetes/nginx-ingress-nginx.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: suricata
spec:
  ingressClassName: nginx
  rules:
  - host: localhost.selks.example
    http:
      paths:
      - path:: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 443
